<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/addtocartbackmain"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:background="@drawable/addtocartbacksub"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/cartadded"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                />
                </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/cartaddedtext"
                android:textColor="@color/colorGrayText"
                android:textSize="10sp"
                android:gravity="center"
                />
                </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                >
                </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/cartcontinue"
                android:background="@drawable/addtocartbuttoncontinue"
                android:gravity="center"
                android:textSize="11sp"
                android:textColor="@color/colorBlack"
                android:id="@+id/btnAddCartContinue"
                />
                </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                >
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                >
            <Button
                android:id="@+id/btnShowCart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textSize="11sp"
                android:text="@string/cartgoto"
                android:textColor="@color/colorWhite"
                android:background="@drawable/addtocartbuttongooto"
                android:gravity="center"

                />
    </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
